Implement market order type simulations